# qt-editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc  qt-canvas.html
src/: main.cpp  md5.cc  md5.h
src/include/: mytype.h
src/models/: mytype.cc  sqliteModel.cc  sqliteModel.h  videoListModel.cc  videoListModel.h
src/qrc/: App.qml  TaskList.qml  draw_clip.qml  list_videos.qml  main.qml  textfield.qml
src/sqlite/: sqlite.cc  sqlite.h
src/wasm/: wasm.h
